[package]
name = "test"
version = "1.0.0"
description = "This is a test program"
authors = ["dude"]
repository = "https://github.com/KremerMichael/sol-test"


[features]
exclude_entrypoint = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
remove_dir_all = "=0.5.0"
solana-program = "1.4.3"
thiserror = "1.0"
arrayref = "0.3.6"
num_enum = "0.5.1"

[dev-dependencies]

[lib]
crate-type = ["cdylib", "lib"]
